@@ -18,12 +18,27 @@ import io.vertx.ext.web.RoutingContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-/** Handles bid requests — the hot path. Uses streaming codecs for zero-alloc JSON. */
+/**
+ * Handles bid requests — the hot path.
+ *
+ * Threading model (Phase 17):
+ *   Event-loop thread : accept request → parse JSON (~50µs, CPU only) → send response
+ *   Worker thread     : full 8-stage pipeline including blocking Redis SMEMBERS (~1ms)
+ *   Virtual thread    : post-response fire-and-forget (freq-cap write + Kafka publish)
+ *
+ * Separating parse/send from blocking I/O keeps the event loop free to accept the
+ * next connection immediately. Throughput ceiling becomes worker-pool-size / pipeline-latency
+ * rather than 1 / pipeline-latency.
+ *
+ * With the Phase 17 Slice 3 segment cache, most pipeline calls skip Redis entirely
+ * (cache-hit latency ~0.1ms), so the effective ceiling is roughly 10× higher again.
+ */
 public final class BidRequestHandler implements Handler<RoutingContext> {
 
     private static final Logger logger = LoggerFactory.getLogger(BidRequestHandler.class);
@@ -35,8 +50,9 @@ public final class BidRequestHandler implements Handler<RoutingContext> {
     private final BidRequestCodec requestCodec;
     private final BidResponseCodec responseCodec;
     private final JsonFactory jsonFactory;
-    private final ExecutorService postResponseExecutor = Executors.newSingleThreadExecutor(
-            r -> new Thread(r, "post-response"));
+    // Virtual threads: each post-response task blocks on Redis + Kafka, but virtual threads
+    // park cheaply rather than consuming an OS thread. No pool size tuning needed.
+    private final ExecutorService postResponseExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
     public BidRequestHandler(BidPipeline pipeline, FrequencyCapper frequencyCapper,
                              EventPublisher eventPublisher, BidMetrics bidMetrics) {
@@ -55,41 +71,51 @@ public final class BidRequestHandler implements Handler<RoutingContext> {
         String requestId = UUID.randomUUID().toString();
         bidMetrics.recordRequest();
 
-        BidContext bidCtx = null;
+        // Parse stays on the event loop — pure CPU work, no I/O (~50µs)
+        Buffer body = ctx.body().buffer();
+        if (body == null || body.length() == 0) {
+            noBid(ctx, requestId, null, NoBidReason.INTERNAL_ERROR, startNanos);
+            return;
+        }
+
+        final BidRequest request;
         try {
-            Buffer body = ctx.body().buffer();
-            if (body == null || body.length() == 0) {
-                noBid(ctx, requestId, null, NoBidReason.INTERNAL_ERROR, startNanos);
+            request = parseRequest(body);
+        } catch (Exception e) {
+            logger.error("Failed to parse bid request", e);
+            noBid(ctx, requestId, null, NoBidReason.INTERNAL_ERROR, startNanos);
+            return;
+        }
+
+        // Pipeline has blocking Redis I/O — offload to Vert.x worker pool.
+        // false = unordered: parallel calls never need to be serialised relative to
+        // each other. This allows all worker threads to execute concurrently.
+        ctx.vertx().<BidContext>executeBlocking(() -> pipeline.execute(request, startNanos), false)
+                .onSuccess(bidCtx -> finishRequest(ctx, requestId, request, startNanos, bidCtx))
+                .onFailure(err -> {
+                    logger.error("Pipeline worker failed unexpectedly", err);
+                    noBid(ctx, requestId, request.userId(), NoBidReason.INTERNAL_ERROR, startNanos);
+                });
+    }
+
+    // Called on the event loop thread after the worker thread returns the BidContext.
+    private void finishRequest(RoutingContext ctx, String requestId, BidRequest request,
+                               long startNanos, BidContext result) {
+        // toRelease tracks whether we still owe the pool a release.
+        // Cleared only when we hand the context back (pipeline.release) or confirm abort.
+        BidContext toRelease = result;
+        try {
+            if (result.isAborted()) {
+                noBid(ctx, requestId, request.userId(), result.getNoBidReason(), startNanos);
                 return;
             }
 
-            // Streaming parse — token-by-token, no ObjectMapper tree
-            BidRequest request;
-            try (JsonParser parser = jsonFactory.createParser(
-                    body.getByteBuf().array(), body.getByteBuf().arrayOffset(),
-                    body.getByteBuf().readableBytes())) {
-                request = requestCodec.parse(parser);
-            } catch (UnsupportedOperationException e) {
-                // Direct buffer without array backing — fall back to getBytes()
-                try (JsonParser parser = jsonFactory.createParser(body.getBytes())) {
-                    request = requestCodec.parse(parser);
-                }
-            }
-
-            bidCtx = pipeline.execute(request, startNanos);
-
-            if (bidCtx.isAborted()) {
-                noBid(ctx, requestId, request.userId(), bidCtx.getNoBidReason(), startNanos);
-                return;
-            }
-
-            if (bidCtx.getResponse() == null) {
+            if (result.getResponse() == null) {
                 noBid(ctx, requestId, request.userId(), NoBidReason.INTERNAL_ERROR, startNanos);
                 return;
             }
 
-            // Streaming write — no ObjectMapper, no intermediate String
-            byte[] responseBytes = responseCodec.encode(bidCtx.getResponse());
+            byte[] responseBytes = responseCodec.encode(result.getResponse());
             ctx.response()
                     .putHeader("Content-Type", "application/json")
                     .setStatusCode(200)
@@ -99,25 +125,22 @@ public final class BidRequestHandler implements Handler<RoutingContext> {
             long latencyMs = latencyNanos / 1_000_000;
             bidMetrics.recordBid(latencyNanos);
 
-            // Extract data needed for post-response BEFORE releasing context to pool
             String userId = request.userId();
-            List<Winner> winners = bidCtx.getSlotWinners().values().stream()
+            List<Winner> winners = result.getSlotWinners().values().stream()
                     .map(w -> new Winner(userId, w.getCampaign().id()))
                     .toList();
-
-            // Per-campaign bid attribution (cardinality bounded by campaign count)
             for (Winner w : winners) {
                 bidMetrics.recordCampaignBid(w.campaignId());
             }
-            List<BidEvent.SlotBidInfo> slotBids = bidCtx.getResponse().bids().stream()
+            List<BidEvent.SlotBidInfo> slotBids = result.getResponse().bids().stream()
                     .map(b -> new BidEvent.SlotBidInfo(b.slotId(), b.adId(), b.price()))
                     .toList();
 
-            // Release context to pool immediately — don't hold it for post-response
-            pipeline.release(bidCtx);
-            bidCtx = null;
+            // Release back to pool before post-response work — context is no longer needed
+            pipeline.release(result);
+            toRelease = null;
 
-            // Post-response work uses extracted data only — no context reference
+            // Freq-cap write + Kafka publish: fire-and-forget on virtual threads
             postResponseExecutor.submit(() -> {
                 for (Winner w : winners) {
                     frequencyCapper.recordImpression(w.userId(), w.campaignId());
@@ -126,12 +149,24 @@ public final class BidRequestHandler implements Handler<RoutingContext> {
             });
 
         } catch (Exception e) {
-            logger.error("Failed to process bid request", e);
-            noBid(ctx, requestId, null, NoBidReason.INTERNAL_ERROR, startNanos);
+            logger.error("Failed to finish bid request", e);
+            noBid(ctx, requestId, request.userId(), NoBidReason.INTERNAL_ERROR, startNanos);
         } finally {
-            // Release context if not handed to post-response thread
-            if (bidCtx != null) {
-                pipeline.release(bidCtx);
+            if (toRelease != null) {
+                pipeline.release(toRelease);
+            }
+        }
+    }
+
+    private BidRequest parseRequest(Buffer body) throws IOException {
+        try (JsonParser parser = jsonFactory.createParser(
+                body.getByteBuf().array(), body.getByteBuf().arrayOffset(),
+                body.getByteBuf().readableBytes())) {
+            return requestCodec.parse(parser);
+        } catch (UnsupportedOperationException e) {
+            // Direct buffer without array backing — fall back to byte-copy
+            try (JsonParser parser = jsonFactory.createParser(body.getBytes())) {
+                return requestCodec.parse(parser);
             }
         }
     }
@@ -151,8 +186,6 @@ public final class BidRequestHandler implements Handler<RoutingContext> {
         eventPublisher.publishBid(BidEvent.noBid(requestId, userId, reason.name(), latencyMs));
     }
 
-    /** Small typed carrier for (userId, campaignId) pairs extracted pre-release.
-     *  Replaces a String[2] that relied on index conventions — clearer at call sites
-     *  and impossible to swap fields by mistake. */
+    /** Typed carrier for (userId, campaignId) pairs — extracted before context is released. */
     private record Winner(String userId, String campaignId) {}
 }
